# CSE230_project

./: .gitignore  Main.hs  Makefile  README.md  brick-example.cabal  stack.yaml  survival-game.cabal
.devcontainer/: devcontainer.json
.stack-work/: stack.sqlite3
.stack-work/ghci/0856c8bf/: cabal_macros.h
.stack-work/ghci/223cf978/: cabal_macros.h
.stack-work/ghci/91e7184d/: cabal_macros.h
.stack-work/ghci/d5c73cb3/: cabal_macros.h
.stack-work/ghci/f7108e35/: cabal_macros.h
.stack-work/ghci/f9a57b8f/: cabal_macros.h
.stack-work/install/x86_64-linux/5f363aa131f44346864e29e5c955ee96910ac4282012611741f3b9202d1e465f/9.2.7/pkgdb/: package.cache
app/: Game.hs  Main.hs  UI.hs
arts/: clouds.txt  island.txt  rain.txt  sun.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Activity.hs  Main.hs  Test.hs  Types.hs
