name:                brick-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable brick-example
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.14 && <5
                     , brick
                     , vty >=6.0 && <7.0
  default-language:    Haskell2010