name:                survival-game
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable survival-game
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  other-modules:     Game
                     , UI
  build-depends:       base >=4.14 && <5
                     , brick
                     , random
                     , random-shuffle
                     , vty
  default-language:    Haskell2010