name:                survival-game
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules:     Types
                     , Activity
                     , Game
  hs-source-dirs:      src, app
  build-depends:       base >=4.14 && <5
                     , brick
                     , random
                     , random-shuffle
                     , vty
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable survival-game
  hs-source-dirs:      app, src
  main-is:             Main.hs
  ghc-options:         -threaded
  other-modules:     Game
                     , UI
  build-depends:       base >=4.14 && <5
                     , brick
                     , random
                     , random-shuffle
                     , vty
                     , containers
                     , survival-game
                     , QuickCheck
  default-language:    Haskell2010